# IB-EE-FFT

./: .gitignore  README.md  outline.md
dia/: divide-and-conquer-rdx2.dia  divide-and-conquer-sprdx.dia  split-butterfly.dia  split-radix-16.dia  split-radix.dia  sys-structure.dia
essay/: bench.ods  ib-ee-fft-paper.tex
ref/: list  list~
snippets/: genrev.c  radix2_test.c  radix2flow  radix4.tex  radix4_test.c  radix4flow  split.tex  split8_test.c  split8_test.s  split8flow  split_test.c  splitflow
src/: CMakeLists.txt  LICENSE  bitrev.h  block.h  ee-fft.c  ee-fft.h  ee-fft.s  module.h
src/bench/: bench.c
